# skill-drift

./: .gitignore  CONTEXT.md  README.md  deno.json  package-lock.json  package.json  tsconfig.json
docs/: architecture-overview.html
docs/adr/: 0001-greenfield-local-tauri.md  0002-c3-seam.md  0003-behind-from-folder-tree-hash.md  0004-baseline-commit-cache.md  0005-background-poll-in-hidden-webview.md  0006-token-read-path.md  0007-rust-native-io-boundary.md  0008-app-private-store.md  0009-native-tray-menu-ui.md  0010-poll-cycle-deep-ts-module.md  0011-view-composes-tray-menu.md  0012-source-repo-reader-port.md  0013-binary-mark-not-badge-count.md  0016-flat-tray-menu-no-submenus.md
src/: App.tsx  platform.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: render-tray-icons.sh
src-tauri/src/: lib.rs  main.rs
src/engine/: cycle.ts  cycle_test.ts  github.ts  github_test.ts  manifest.ts  manifest_test.ts  menu.ts  menu_test.ts  poll.ts  poll_test.ts  schedule.ts  schedule_test.ts
