[package]
name = "skill-drift"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skill_drift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Poll-clock interval (ADR-0005). "time" only — Tauri drives the runtime via
# async_runtime::spawn; we just need tokio::time::interval.
tokio = { version = "1", features = ["time"] }
# GitHub PAT read from the OS Keychain (ADR-0006). keyring-core is the cross-
# platform abstraction (the old `keyring` crate self-demoted in v4); the macOS
# login-Keychain backend is target-gated below, one #[cfg] arm per future OS.
keyring-core = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# "keychain" = the login-Keychain backend (vs "protected", the keychain-less data
# store); the crate requires one be chosen on macOS.
apple-native-keyring-store = { version = "1", features = ["keychain"] }
# Login-shell PATH for the `gh` token fallback (ADR-0006): a Finder-/bundle-launched
# app inherits a minimal PATH, so a bare `gh` spawn can't find the binary. The crate
# is unpublished (Tauri's own) — pin a rev for a reproducible build.
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev = "c4c45d503ea115a839aae718d02f79e7c7f0f673" }

